# flash-rag

./: .gitignore  README.md  dockerfile  explore.ipynb  main.py  makefile  pyproject.toml
notebooks/: explore.ipynb  update.ipynb
src/: chromadb.py  extract.py  load.py  mistral.py  parse.py  populate.py  query.py  update.py  utils.py
static/: index.html  style.css
