[project]
name = "flash-notes-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "mistralai>=2.2.0",
    "pandas>=3.0.2",
]
